# AirQualityMonitor

./: .gitignore  CMakeLists.txt  README.txt
docs/: Doxyfile.in
include/: INSTALL_JSON.txt
src/: main.cpp
src/analysis/: DataAnalyzer.cpp  DataAnalyzer.h
src/api/: GiosApiClient.cpp  GiosApiClient.h
src/database/: LocalDatabase.cpp  LocalDatabase.h
src/gui/: AnalysisWidget.cpp  AnalysisWidget.h  ChartWidget.cpp  ChartWidget.h  HistoryWidget.cpp  HistoryWidget.h  MainWindow.cpp  MainWindow.h  MapWidget.cpp  MapWidget.h  StationListWidget.cpp  StationListWidget.h
src/models/: AirQualityIndex.cpp  AirQualityIndex.h  Measurement.cpp  Measurement.h  Sensor.cpp  Sensor.h  Station.cpp  Station.h
tests/: test_analysis.cpp  test_database.cpp  test_models.cpp
